# envoy-wasm-filter

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
envoy/: Dockerfile.proxy  envoy.yaml
k8s/: 0_namespace.yaml  1_grpc_service.yaml  2_echo.yaml
proto/: file1.proto
src/: lib.rs
stubs/: hello.json  hi.json
