[package]
name = "envoy-wasm-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
proxy-wasm = "0.2.1"
prost = "0.11.5"
prost-types = "0.11.5"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
prost-build = "0.11.5"

[profile.release]
lto = true
